--- a/Client/PlayerClient/GamesControl/StartPlayerControl.xaml
+++ b/Client/PlayerClient/GamesControl/StartPlayerControl.xaml
@@ -7,12 +7,11 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid x:Name="grid">
-        <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition Height="80"/>
-        </Grid.RowDefinitions>
-        <Label x:Name="lblQuestion" Content="Label" Grid.Row="0"/>
-        <Button x:Name="btnBell" Content="Chuông" Grid.Row="1" Click="btnBell_Click"/>
-
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="2*"/>
+        </Grid.ColumnDefinitions>
+        <Label x:Name="lblQuestion" Content="Label" Grid.Column="0"/>
+        <Image x:Name="image" Grid.Column="1"/>
     </Grid>
 </UserControl>
