--- a/Client/PlayerClient/GamesControl/ImageControl.xaml
+++ b/Client/PlayerClient/GamesControl/ImageControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Client.PlayerClient.ImageControl"
+﻿<UserControl x:Class="Client.PlayerClient.GamesControl.ImageControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Image x:Name="image" Stretch="Uniform" Source="/PlayerClient/vyfactraw - Copy.png"/>
+        <Image x:Name="image" Stretch="Uniform" />
         <Rectangle x:Name="rectUL" Fill="Blue"/>
         <Rectangle x:Name="rectUR" Fill="Blue"/>
         <Rectangle x:Name="rectDL" Fill="Blue"/>
