--- a/Client/PlayerClient/GamesControl/ObstaPlayerControl.xaml
+++ b/Client/PlayerClient/GamesControl/ObstaPlayerControl.xaml
@@ -13,9 +13,15 @@
             <RowDefinition Height="40"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
-        <Label x:Name="lblQuestion" Content="Label" Grid.Row="1" FontSize="17"/>
         <Label x:Name="lblTime" Content="0" Grid.Row="0" HorizontalAlignment="Right" FontSize="20" FontWeight="Bold"/>
         <Label x:Name="lblTemp" Content="Hàng ngang" Grid.Row="0" HorizontalAlignment="Left"/>
+        <Grid x:Name="quesGrid" Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="2*"/>
+            </Grid.ColumnDefinitions>
+            <Label x:Name="lblQuestion" Content="Label" Grid.Column="0" FontSize="17"/>
+        </Grid>
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*"/>
