--- a/Server/HostServer/FinishControl.xaml
+++ b/Server/HostServer/FinishControl.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="Server.HostServer.Components.FinishControl"
+﻿<UserControl x:Class="Server.HostServer.FinishControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Server.HostServer.Components"
+             xmlns:local="clr-namespace:Server.HostServer"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="600" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -18,8 +18,9 @@
                 <Button x:Name="btnS3" Content="Thí sinh 3" HorizontalAlignment="Left" Margin="130,10,0,0" VerticalAlignment="Top"/>
                 <Button x:Name="btnS4" Content="Thí sinh 4" HorizontalAlignment="Left" Margin="190,10,0,0" VerticalAlignment="Top"/>
             </Grid>
-            <Grid Height="100" Width="500">
+            <Grid x:Name="grdChoosePoint" Height="125" Width="500">
                 <Grid.RowDefinitions>
+                    <RowDefinition/>
                     <RowDefinition/>
                     <RowDefinition/>
                     <RowDefinition/>
@@ -39,7 +40,20 @@
                 <Label Grid.Row="3" Grid.Column="0">Lượt 3</Label>
             </Grid>
             <Grid Height="300">
-                
+                <Button x:Name="btnTurn" Content="Hiện câu hỏi" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+                <Button x:Name="btnFinish" Content="Kết thúc lượt" HorizontalAlignment="Left" Margin="93,10,0,0" VerticalAlignment="Top"/>
+                <Label Content="Câu hỏi" HorizontalAlignment="Left" Margin="10,49,0,0" VerticalAlignment="Top"/>
+                <Label Content="Trả lời" HorizontalAlignment="Left" Margin="14,118,0,0" VerticalAlignment="Top"/>
+                <Label HorizontalAlignment="Left" Margin="88,49,0,0" VerticalAlignment="Top">
+                    <TextBlock x:Name="txtQuestion" HorizontalAlignment="Left" Height="30" TextWrapping="Wrap" Text="" VerticalAlignment="Top" />
+                </Label>
+                <Label HorizontalAlignment="Left" Margin="88,113,0,0" VerticalAlignment="Top">
+                    <TextBlock x:Name="txtAnswer" HorizontalAlignment="Left" Height="30" TextWrapping="Wrap" Text="" VerticalAlignment="Top" />
+                </Label>
+                <Button x:Name="btnStart" Content="Bắt đầu suy nghĩ" HorizontalAlignment="Left" Margin="16,185,0,0" VerticalAlignment="Top"/>
+                <Button x:Name="btnPrac" Content="Bắt đầu thực hành" HorizontalAlignment="Left" Margin="129,185,0,0" VerticalAlignment="Top"/>
+                <Button x:Name="btnCorrect" Content="Đúng" HorizontalAlignment="Left" Margin="16,234,0,0" VerticalAlignment="Top" Height="37" Width="54" Background="Lime"/>
+                <Button x:Name="btnWrong" Content="Sai" HorizontalAlignment="Left" Margin="88,234,0,0" VerticalAlignment="Top" Height="37" Width="54" Background="Red"/>
             </Grid>
         </StackPanel>
 
