finish doing finishcontroller

--- a/Client/PlayerClient/PlayerWindow.xaml
+++ b/Client/PlayerClient/PlayerWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Client.PlayerClient"
         mc:Ignorable="d"
-        Title="PlayerWindow" Height="450" Width="800">
+        Title="PlayerWindow" Height="450" Width="800" Closed="Window_Closed">
     <Grid x:Name="grid">
         
     </Grid>
