--- a/Server/HostServer/FinishController.xaml
+++ b/Server/HostServer/FinishController.xaml
@@ -7,7 +7,7 @@
              xmlns:compo="clr-namespace:Server.HostServer.Components"
              mc:Ignorable="d"   
              d:DesignHeight="650" MinHeight="650" d:DesignWidth="600" MinWidth="600">
-    <Grid>
+    <Grid x:Name="grid">
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="100"/>
@@ -44,21 +44,23 @@
             <Grid x:Name="mainGrid" Height="370">
                 <Button x:Name="btnShowQuestion" Content="Hiện câu hỏi" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Click="btnShowQuestion_Click"/>
                 <Button x:Name="btnFinish" Content="Kết thúc lượt" HorizontalAlignment="Left" Margin="93,10,0,0" VerticalAlignment="Top" Click="btnFinish_Click"/>
+                <Label x:Name="lblTimer" HorizontalAlignment="Left" Margin="574,7,0,0" VerticalAlignment="Top" >0</Label>
 
                 <compo:QuestionShowing x:Name="questionBox" VerticalAlignment="Top" Margin="0, 40, 0, 0" />
 
                 <Button x:Name="btnStar" Content="Sao" HorizontalAlignment="Left" Margin="545,206,0,0" VerticalAlignment="Top" Background="Yellow" Height="44" Width="45" Click="btnStar_Click"/>
-                <Label HorizontalAlignment="Left" Margin="69,215,0,0" VerticalAlignment="Top">lưu ý: việc chọn sao chỉ có tác dụng sau khi bấm Hiện câu hỏi</Label>
+                <Label HorizontalAlignment="Left" Margin="69,203,0,0" VerticalAlignment="Top">lưu ý: việc chọn sao chỉ có tác dụng sau khi bấm Hiện câu hỏi</Label>
+                <Label HorizontalAlignment="Left" Margin="69,225,0,0" VerticalAlignment="Top">NHỚ CHỌN SAO TRƯỚC KHI HIỆN CÂU HỎI MỚI</Label>
 
                 <Button x:Name="btnStart" Content="Bắt đầu suy nghĩ" HorizontalAlignment="Left" Margin="9,283,0,0" VerticalAlignment="Top" Click="btnStart_Click"/>
                 <Button x:Name="btnPrac" Content="Bắt đầu thực hành" HorizontalAlignment="Left" Margin="109,283,0,0" VerticalAlignment="Top" Click="btnPrac_Click"/>
                 <Button x:Name="btnCorrect" Content="Đúng" HorizontalAlignment="Left" Margin="10,319,0,0" VerticalAlignment="Top" Height="37" Width="54" Background="Lime" Click="btnCorrect_Click"/>
                 <Button x:Name="btnWrong" Content="Sai" HorizontalAlignment="Left" Margin="80,319,0,0" VerticalAlignment="Top" Height="37" Width="54" Background="Red" Click="btnWrong_Click"/>
 
-                <Button x:Name="btn5s" Content="5s hút" HorizontalAlignment="Center" Margin="0,283,0,0" VerticalAlignment="Top" Click="btnPrac_Click" Width="54"/>
-                <Button x:Name="btnSuckPrac" Content="Bắt đầu lại thực hành" HorizontalAlignment="Left" Margin="349,283,0,0" VerticalAlignment="Top" Click="btnPrac_Click"/>
-                <Button x:Name="btnSuckCorrect" Content="Hút đúng" HorizontalAlignment="Center" Margin="0,319,0,0" VerticalAlignment="Top" Height="37" Width="54" Background="Lime" Click="btnCorrect_Click"/>
-                <Button x:Name="btnSuckWrong" Content="Hút sai" HorizontalAlignment="Left" Margin="349,319,0,0" VerticalAlignment="Top" Height="37" Width="54" Background="Red" Click="btnWrong_Click"/>
+                <Button x:Name="btn5s" Content="5s hút" HorizontalAlignment="Center" Margin="0,283,0,0" VerticalAlignment="Top" Width="54" Click="btn5s_Click"/>
+                <Button x:Name="btnSuckPrac" Content="Bắt đầu lại thực hành" HorizontalAlignment="Left" Margin="349,283,0,0" VerticalAlignment="Top" Click="btnSuckPrac_Click"/>
+                <Button x:Name="btnSuckCorrect" Content="Hút đúng" HorizontalAlignment="Center" Margin="0,319,0,0" VerticalAlignment="Top" Height="37" Width="54" Background="Lime" Click="btnSuckCorrect_Click"/>
+                <Button x:Name="btnSuckWrong" Content="Hút sai" HorizontalAlignment="Left" Margin="349,319,0,0" VerticalAlignment="Top" Height="37" Width="54" Background="Red" Click="btnSuckWrong_Click"/>
             </Grid>
         </StackPanel>
 
