--- a/Server/ExamMaker/ExamMakerWindow.xaml
+++ b/Server/ExamMaker/ExamMakerWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Server.ExamMaker"
         mc:Ignorable="d"
-        Title="ExamMakerWindow" Height="450" Width="800" Unloaded="Window_Unloaded">
+        Title="ExamMakerWindow" MinHeight="450" MinWidth="800" Unloaded="Window_Unloaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
@@ -18,6 +18,7 @@
             <TabItem x:Name="tabFinsh" Header="Về đích"/>
         </TabControl>
         <Button x:Name="btnSave" Content="Lưu" HorizontalAlignment="Left" Margin="693,10,0,0" VerticalAlignment="Top" Height="30" Grid.RowSpan="2" Width="97" Click="btnSave_Click"/>
+        <Button x:Name="btnOpen" Content="Mở Excel" HorizontalAlignment="Left" Margin="570,10,0,0" VerticalAlignment="Top" Height="30" Grid.RowSpan="2" Width="97" Click="btnOpen_Click"/>
 
     </Grid>
 </Window>
