--- a/Server/HostServer/Components/AnswersControl.xaml
+++ b/Server/HostServer/Components/AnswersControl.xaml
@@ -23,10 +23,19 @@
                 <ColumnDefinition />
                 <ColumnDefinition Width="50"/>
             </Grid.ColumnDefinitions>
-            <Label x:Name="lblName1" Content="{Binding Path=[]}" Grid.Row="0" Grid.Column="0"/>
-            <Label x:Name="lblName2" Content="{Binding Path=[]}" Grid.Row="1" Grid.Column="0"/>
-            <Label x:Name="lblName3" Content="{Binding Path=[]}" Grid.Row="2" Grid.Column="0"/>
-            <Label x:Name="lblName4" Content="{Binding Path=[]}" Grid.Row="3" Grid.Column="0"/>
+            <Label x:Name="lblName1" Content="{Binding Path=names[0]}" Grid.Row="0" Grid.Column="0"/>
+            <Label x:Name="lblName2" Content="{Binding Path=names[1]}" Grid.Row="1" Grid.Column="0"/>
+            <Label x:Name="lblName3" Content="{Binding Path=names[2]}" Grid.Row="2" Grid.Column="0"/>
+            <Label x:Name="lblName4" Content="{Binding Path=names[3]}" Grid.Row="3" Grid.Column="0"/>
+            <Label x:Name="lblAnswer1" Grid.Row="0" Grid.Column="1"/>
+            <Label x:Name="lblAnswer2" Grid.Row="1" Grid.Column="1"/>
+            <Label x:Name="lblAnswer3" Grid.Row="2" Grid.Column="1"/>
+            <Label x:Name="lblAnswer4" Grid.Row="3" Grid.Column="1"/>
+            <CheckBox x:Name="chkBox1" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <CheckBox x:Name="chkBox2" Grid.Row="1" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <CheckBox x:Name="chkBox3" Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <CheckBox x:Name="chkBox4" Grid.Row="3" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </Grid>
+        <Button x:Name="btnConfirm" Content="Xác nhận" Grid.Row="1"/>
     </Grid>
 </UserControl>
