--- a/Client/PlayerClient/GamesControl/AccelPlayerControl.xaml
+++ b/Client/PlayerClient/GamesControl/AccelPlayerControl.xaml
@@ -22,7 +22,8 @@
             <Label x:Name="lblQuestion" Content="Label" Grid.Column="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
             <Label x:Name="lblTime" Content="0" Grid.Column="2" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" />
         </Grid>
-        <MediaElement x:Name="mediaPlayer" Grid.Row="1"/>
+        <MediaElement x:Name="mediaPlayer" LoadedBehavior="Manual" Stretch="Uniform" Grid.Row="1"/>
+
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*"/>
