--- a/Server/HostServer/Components/AnswersControl.xaml
+++ b/Server/HostServer/Components/AnswersControl.xaml
@@ -5,49 +5,35 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Server.HostServer.Components"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="800">
+             d:DesignHeight="120" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
-            <RowDefinition Height="50"/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="150"/>
-                <ColumnDefinition />
-                <ColumnDefinition Width="75"/>
-                <ColumnDefinition Width="50"/>
-            </Grid.ColumnDefinitions>
-            <Label x:Name="lblName1" Content="{Binding Path=names[0]}" Grid.Row="0" Grid.Column="0"/>
-            <Label x:Name="lblName2" Content="{Binding Path=names[1]}" Grid.Row="1" Grid.Column="0"/>
-            <Label x:Name="lblName3" Content="{Binding Path=names[2]}" Grid.Row="2" Grid.Column="0"/>
-            <Label x:Name="lblName4" Content="{Binding Path=names[3]}" Grid.Row="3" Grid.Column="0"/>
-            <Label x:Name="lblAnswer1" Grid.Row="0" Grid.Column="1"/>
-            <Label x:Name="lblAnswer2" Grid.Row="1" Grid.Column="1"/>
-            <Label x:Name="lblAnswer3" Grid.Row="2" Grid.Column="1"/>
-            <Label x:Name="lblAnswer4" Grid.Row="3" Grid.Column="1"/>
-            <Label x:Name="lblTime1" Grid.Row="0" Grid.Column="2"/>
-            <Label x:Name="lblTime2" Grid.Row="1" Grid.Column="2"/>
-            <Label x:Name="lblTime3" Grid.Row="2" Grid.Column="2"/>
-            <Label x:Name="lblTime4" Grid.Row="3" Grid.Column="2"/>
-            <CheckBox x:Name="chkBox1" Grid.Row="0" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <CheckBox x:Name="chkBox2" Grid.Row="1" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <CheckBox x:Name="chkBox3" Grid.Row="2" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <CheckBox x:Name="chkBox4" Grid.Row="3" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        </Grid>
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
-            <Button x:Name="btnShowAnswer" Content="Hiện đáp án" Grid.Column="0" Click="btnShowAnswer_Click"/>
-            <Button x:Name="btnConfirm" Content="Xác nhận" Grid.Column="1" Click="btnConfirm_Click"/>
-        </Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="150"/>
+            <ColumnDefinition />
+            <ColumnDefinition Width="75"/>
+            <ColumnDefinition Width="50"/>
+        </Grid.ColumnDefinitions>
+        <Label x:Name="lblName1" Content="{Binding Path=names.names[0]}" Grid.Row="0" Grid.Column="0"/>
+        <Label x:Name="lblName2" Content="{Binding Path=names.names[1]}" Grid.Row="1" Grid.Column="0"/>
+        <Label x:Name="lblName3" Content="{Binding Path=names.names[2]}" Grid.Row="2" Grid.Column="0"/>
+        <Label x:Name="lblName4" Content="{Binding Path=names.names[3]}" Grid.Row="3" Grid.Column="0"/>
+        <Label x:Name="lblAnswer1" Content="{Binding Path=answers.answers[0]}" Grid.Row="0" Grid.Column="1" HorizontalContentAlignment = "Right"/>
+        <Label x:Name="lblAnswer2" Content="{Binding Path=answers.answers[0]}" Grid.Row="1" Grid.Column="1" HorizontalContentAlignment = "Right"/>
+        <Label x:Name="lblAnswer3" Content="{Binding Path=answers.answers[0]}" Grid.Row="2" Grid.Column="1" HorizontalContentAlignment = "Right"/>
+        <Label x:Name="lblAnswer4" Content="{Binding Path=answers.answers[0]}" Grid.Row="3" Grid.Column="1" HorizontalContentAlignment = "Right"/>
+        <Label x:Name="lblTime1" Grid.Row="0" Grid.Column="2" HorizontalContentAlignment = "Right"/>
+        <Label x:Name="lblTime2" Grid.Row="1" Grid.Column="2" HorizontalContentAlignment = "Right"/>
+        <Label x:Name="lblTime3" Grid.Row="2" Grid.Column="2" HorizontalContentAlignment = "Right"/>
+        <Label x:Name="lblTime4" Grid.Row="3" Grid.Column="2" HorizontalContentAlignment = "Right"/>
+        <CheckBox x:Name="chkBox1" Grid.Row="0" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <CheckBox x:Name="chkBox2" Grid.Row="1" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <CheckBox x:Name="chkBox3" Grid.Row="2" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <CheckBox x:Name="chkBox4" Grid.Row="3" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Grid>
 </UserControl>
