--- a/Client/PlayerClient/GamesControl/ObstaPlayerControl.xaml
+++ b/Client/PlayerClient/GamesControl/ObstaPlayerControl.xaml
@@ -5,24 +5,25 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Client.PlayerClient.GamesControl"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="600" d:DesignWidth="900">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="35"/>
+            <RowDefinition Height="2*"/>
             <RowDefinition/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <Label x:Name="lblTime" Content="0" Grid.Row="0" HorizontalAlignment="Right" FontSize="20" FontWeight="Bold"/>
         <Label x:Name="lblTemp" Content="Hàng ngang" Grid.Row="0" HorizontalAlignment="Left"/>
-        <Grid x:Name="quesGrid" Grid.Row="1">
+        <Grid x:Name="quesGrid" Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="3*"/>
                 <ColumnDefinition Width="2*"/>
             </Grid.ColumnDefinitions>
             <Label x:Name="lblQuestion" Content="Label" Grid.Column="0" FontSize="17"/>
         </Grid>
-        <Grid Grid.Row="2">
+        <Grid Grid.Row="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*"/>
                 <ColumnDefinition/>
@@ -30,6 +31,6 @@
             <TextBox x:Name="txtAnswer" Text="" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsEnabled="False" Grid.Column="0" KeyDown="txtAnswer_KeyDown"/>
             <Label x:Name="lblAnswer" Content="" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.Column="1"/>
         </Grid>
-        <Button x:Name="btnBell" Content="Giành quyền CNV" Grid.Row="3" Click="btnBell_Click" IsEnabled="False"/>
+        <Button x:Name="btnBell" Content="Giành quyền CNV" Grid.Row="4" Click="btnBell_Click" IsEnabled="False"/>
     </Grid>
 </UserControl>
