--- a/Client/PlayerClient/GamesControl/ObstaPlayerControl.xaml
+++ b/Client/PlayerClient/GamesControl/ObstaPlayerControl.xaml
@@ -5,17 +5,18 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Client.PlayerClient.GamesControl"
              mc:Ignorable="d" 
-             d:DesignHeight="600" d:DesignWidth="900">
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="35"/>
-            <RowDefinition Height="2*"/>
+            <RowDefinition Height="3*"/>
             <RowDefinition/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <Label x:Name="lblTime" Content="0" Grid.Row="0" HorizontalAlignment="Right" FontSize="20" FontWeight="Bold"/>
         <Label x:Name="lblTemp" Content="Hàng ngang" Grid.Row="0" HorizontalAlignment="Left"/>
+        <local:ImageControl x:Name="imageControl" Grid.Row="1"/>
         <Grid x:Name="quesGrid" Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="3*"/>
