--- a/Server/HostServer/ObstaController.xaml
+++ b/Server/HostServer/ObstaController.xaml
@@ -23,10 +23,10 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <Button x:Name="btnHN1" Content="1" Grid.Column="0" Grid.Row="0" Click="btnHN1_Click"/>
-            <Button x:Name="btnHN2" Content="2" Grid.Column="0" Grid.Row="1"/>
-            <Button x:Name="btnHN3" Content="3" Grid.Column="0" Grid.Row="2"/>
-            <Button x:Name="btnHN4" Content="4" Grid.Column="0" Grid.Row="3"/>
-            <Button x:Name="btnTT" Content="TT" Grid.Column="0" Grid.Row="4"/>
+            <Button x:Name="btnHN2" Content="2" Grid.Column="0" Grid.Row="1" Click="btnHN2_Click"/>
+            <Button x:Name="btnHN3" Content="3" Grid.Column="0" Grid.Row="2" Click="btnHN3_Click"/>
+            <Button x:Name="btnHN4" Content="4" Grid.Column="0" Grid.Row="3" Click="btnHN4_Click"/>
+            <Button x:Name="btnTT" Content="TT" Grid.Column="0" Grid.Row="4" Click="btnTT_Click"/>
             <Label x:Name="lblHN1" Grid.Column="1" Grid.Row="0"/>
             <Label x:Name="lblHN2" Grid.Column="1" Grid.Row="1"/>
             <Label x:Name="lblHN3" Grid.Column="1" Grid.Row="2"/>
@@ -42,7 +42,7 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <Button x:Name="btnShowAnswer" Grid.Column="0" Content="Hiện đáp án"/>
-            <Button x:Name="btnConfirm" Grid.Column="1" Content="Xác nhận"/>
+            <Button x:Name="btnConfirm" Grid.Column="1" Content="Xác nhận" Click="btnConfirm_Click"/>
         </Grid>
         <Grid x:Name="gridPoint" Width ="500" Height="60" VerticalAlignment="Top" Margin="0,540,0,0"/>
         <Label VerticalAlignment="Top" Margin="0,640,0,0">Hút:</Label>
@@ -51,8 +51,8 @@
                 <ColumnDefinition Width="100"/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Button x:Name="btnBellConfirm">Xác nhận</Button>
-            <StackPanel x:Name="stackPlayerList"/>
+            <Button x:Name="btnBellConfirm" Click="btnBellConfirm_Click">Xác nhận</Button>
+            <StackPanel x:Name="stackPlayerList" Grid.Column="1"/>
         </Grid>
         <Label Content="Thời gian" HorizontalAlignment="Left" Margin="59,337,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblTime" Content="0" HorizontalAlignment="Left" Margin="126,337,0,0" VerticalAlignment="Top"/>
