--- a/Server/HostServer/AccelController.xaml
+++ b/Server/HostServer/AccelController.xaml
@@ -26,7 +26,7 @@
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
                 <Button x:Name="btnShowAnswer" Content="Hiện đáp án" Grid.Column="0"/>
-                <Button x:Name="btnConfirm" Content="Xác nhận" Grid.Column="1"/>
+                <Button x:Name="btnConfirm" Content="Xác nhận" Grid.Column="1" Click="btnConfirm_Click"/>
             </Grid>
         </StackPanel>
 
