--- a/Client/PlayerClient/GamesControl/StartPlayerControl.xaml
+++ b/Client/PlayerClient/GamesControl/StartPlayerControl.xaml
@@ -7,13 +7,27 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid x:Name="grid">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="3*"/>
-            <ColumnDefinition Width="2*"/>
-        </Grid.ColumnDefinitions>
-        <Label Grid.Column="0">
-            <TextBlock x:Name="txtQuestion"/>
-        </Label>
-        <Image x:Name="image" Grid.Column="1"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0">
+            <Label HorizontalAlignment="Left" VerticalContentAlignment="Center">
+                <TextBlock FontSize="10"> Thời gian </TextBlock>
+            </Label>
+            <Label HorizontalAlignment="Left" VerticalContentAlignment="Center" Margin="100,0,0,0">
+                <TextBlock x:Name="txtTime" FontSize="15">0</TextBlock>
+            </Label>
+        </Grid>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="3.5*"/>
+                <ColumnDefinition Width="2*"/>
+            </Grid.ColumnDefinitions>
+            <Label Grid.Column="0">
+                <TextBlock x:Name="txtQuestion">Câu hỏi</TextBlock>
+            </Label>
+            <Image x:Name="image" Grid.Column="1"/>
+        </Grid>
     </Grid>
 </UserControl>
