--- a/Client/PlayerClient/GamesControl/ObstaPlayerControl.xaml
+++ b/Client/PlayerClient/GamesControl/ObstaPlayerControl.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Client.PlayerClient.GamesControl"
+             xmlns:compo="clr-namespace:Client.PlayerClient.GamesControl.Components"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -15,17 +16,9 @@
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <Label x:Name="lblTime" Content="0" Grid.Row="0" HorizontalAlignment="Right" FontSize="20" FontWeight="Bold"/>
-        <Label x:Name="lblTemp" Content="Hàng ngang" Grid.Row="0" HorizontalAlignment="Left"/>
+        <Label x:Name="lblTemp" Content="Hàng ngang" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="14"/>
         <local:ImageControl x:Name="imageControl" Grid.Row="1"/>
-        <Grid x:Name="quesGrid" Grid.Row="2">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="3*"/>
-                <ColumnDefinition Width="2*"/>
-            </Grid.ColumnDefinitions>
-            <Label Grid.Column="0" FontSize="17">
-                <TextBlock x:Name="txtQuestion"/>
-            </Label>
-        </Grid>
+        <compo:QuestionControl x:Name="questionBox" Grid.Row="2"/>
         <Grid Grid.Row="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*"/>
