--- a/Client/PlayerClient/GamesControl/StartPlayerControl.xaml
+++ b/Client/PlayerClient/GamesControl/StartPlayerControl.xaml
@@ -4,30 +4,22 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Client.PlayerClient.GamesControl"
+             xmlns:compo="clr-namespace:Client.PlayerClient.GamesControl.Components"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid x:Name="grid">
         <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
+            <RowDefinition Height="40"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
             <Label HorizontalAlignment="Left" VerticalContentAlignment="Center">
-                <TextBlock FontSize="10"> Thời gian </TextBlock>
+                <TextBlock FontSize="13"> Thời gian</TextBlock>
             </Label>
             <Label HorizontalAlignment="Left" VerticalContentAlignment="Center" Margin="100,0,0,0">
-                <TextBlock x:Name="txtTime" FontSize="15">0</TextBlock>
+                <TextBlock x:Name="txtTime" FontSize="18">0</TextBlock>
             </Label>
         </Grid>
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="3.5*"/>
-                <ColumnDefinition Width="2*"/>
-            </Grid.ColumnDefinitions>
-            <Label Grid.Column="0">
-                <TextBlock x:Name="txtQuestion">Câu hỏi</TextBlock>
-            </Label>
-            <Image x:Name="image" Grid.Column="1"/>
-        </Grid>
+        <compo:QuestionControl x:Name="quesControl" Grid.Row="1"></compo:QuestionControl>
     </Grid>
 </UserControl>
